# lidar-camera-calibration

./: .gitignore  Dockerfile  LICENSE  build.sh  run.sh
docker/: Dockerfile  docker-compose.yaml  run.sh
docker/models/calibration_target/: calibration_target.sdf
docker/models/camera/: camera.sdf
docker/models/lidar/: model.config
docker/models/lidar/meshes/: lidar.dae
models/calibration_target/: model.config
models/calibration_target/meshes/: calibration_target.dae
models/camera/: camera.sdf  model.config
models/lidar/: lidar.sdf
ros/src/lidar_camera_calibration/: CMakeLists.txt  package.xml
ros/src/lidar_camera_calibration/include/: lidar_camera_calibration.h
ros/src/lidar_camera_calibration/launch/: calibration_node.launch  sim.launch
ros/src/lidar_camera_calibration/nodes/: calib
ros/src/lidar_camera_calibration/src/: lidar_camera_calibration.cpp
ws/src/calib_test/: CMakeLists.txt  package.xml
ws/src/calib_test/cfg/: config.rviz  head_camera.yaml
ws/src/calib_test/config/: config.yaml
ws/src/calib_test/launch/: calib_node.launch  mono_cam_calibration.launch  sim.launch
ws/src/calib_test/nodes/: calib
ws/src/calib_test/src/: plane_fit_node.cpp
ws/src/calib_test/worlds/: lidar_camera_calibration.world
ws/src/lidar_camera_calibration/: CMakeLists.txt  package.xml
ws/src/lidar_camera_calibration/config/: config.rviz
ws/src/lidar_camera_calibration/include/: lidar_camera_calibration.h
ws/src/lidar_camera_calibration/launch/: calib_node.launch  calibration_node.launch
ws/src/lidar_camera_calibration/src/: lidar_camera_calibration.cpp
ws/src/velodyne/velodyne_pointcloud/launch/: VLP-32C_points.launch
