<?xml version="1.0"?>
<package format="2">
  <name>calib_test</name>
  <version>0.0.0</version>
  <description>The calib_test package</description>

  <maintainer email="angel.j.avila@gmail.com">angel</maintainer>
  <license>BSD-2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

</package>
